--- a/CSScheatsheet/index.html
+++ b/CSScheatsheet/index.html
@@ -3,8 +3,15 @@
 <head>
     
     <title>CSS CheatSheet</title>
+    <style type="text/css">
+        h1{
+            color: blue;
+        }
+    </style>
 </head>
 <body>
+
+    <h1>Hello World</h1>
     
 </body>
 </html>
