--- a/CSScheatsheet/index.html
+++ b/CSScheatsheet/index.html
@@ -3,11 +3,7 @@
 <head>
     
     <title>CSS CheatSheet</title>
-    <style type="text/css">
-        h1{
-            color: blue;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
