--- a/CSScheatsheet/index.html
+++ b/CSScheatsheet/index.html
@@ -8,6 +8,11 @@
 <body>
 
     <h1>Hello World</h1>
+
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, 
+        libero aliquam voluptatum cumque, quisquam iste assumenda modi ipsum 
+        soluta, sapiente excepturi similique asperiores adipisci magnam 
+        liquid laudantium dolorem voluptatem iusto.</p>
     
 </body>
 </html>
