--- a/CSScheatsheet/index.html
+++ b/CSScheatsheet/index.html
@@ -6,13 +6,15 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
+    <div class="box-1">
     <h1>Hello World</h1>
 
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, 
         libero aliquam voluptatum cumque, quisquam iste assumenda modi ipsum 
         soluta, sapiente excepturi similique asperiores adipisci magnam 
         liquid laudantium dolorem voluptatem iusto.</p>
+
+    </div>
     
 </body>
 </html>
