--- a/CSScheatsheet/index.html
+++ b/CSScheatsheet/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+    <div class="container">
     <div class="box-1">
     <h1>Hello World</h1>
 
@@ -15,6 +16,7 @@
         liquid laudantium dolorem voluptatem iusto.</p>
 
     </div>
+</div>
     
 </body>
 </html>
