--- a/CSScheatsheet/index.html
+++ b/CSScheatsheet/index.html
@@ -17,6 +17,31 @@
 
         </div>
 </div>
+
+<div class="container">
+    <div class="box-2">
+    <h1>Goodbye World</h1>
+
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, 
+        libero aliquam voluptatum cumque, quisquam iste assumenda modi ipsum 
+        soluta, sapiente excepturi similique asperiores adipisci magnam 
+        liquid laudantium dolorem voluptatem iusto.</p>
+
+    </div>
+
+    <div class="choices">
+        <h2> Catagories </h2>
+        <ul>
+            <li> <a href="#"> Catagory 1</a></li>
+            <li> <a href="#"> Catagory 2</a></li>
+            <li> <a href="#"> Catagory 3</a></li>
+            <li> <a href="#"> Catagory 4</a></li>
+        </ul>
+    </div>
+
+</div>
+
+
     
 </body>
 </html>
