--- a/CSScheatsheet/index.html
+++ b/CSScheatsheet/index.html
@@ -39,7 +39,25 @@
         </ul>
     </div>
 
-</div>
+    <form class="my-form">
+        <div class="form-group">
+            <label>Name:</label>
+            <input type="text" text="text">
+        </div>
+            <div class="form-group">
+                <label>Email:</label>
+                <input type="text" text="Email">
+            </div>
+                <div class="form-group">
+                    <label>Message:</label>
+                    <textarea name="message"></textarea>
+                </div>
+
+                <input class="button" type="submit" value="submit" name="">
+    </form>
+
+    <!-- End of Container -->
+</div> 
 
 
     
