--- a/CSScheatsheet/index.html
+++ b/CSScheatsheet/index.html
@@ -56,6 +56,23 @@
                 <input class="button" type="submit" value="submit" name="">
     </form>
 
+    <div class="block">
+        <h3>Heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque ex tempora optio mollitia nesciunt..</p>
+    </div>
+
+    <div class="block">
+        <h3>Heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque ex tempora optio mollitia nesciunt..</p>
+    </div>
+
+    <div class="block">
+        <h3>Heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque ex tempora optio mollitia nesciunt..</p>
+    </div>
+
+    <div class="clr"></div>
+
     <!-- End of Container -->
 </div> 
 
