--- a/CSScheatsheet/index.html
+++ b/CSScheatsheet/index.html
@@ -73,6 +73,16 @@
 
     <div class="clr"></div>
 
+
+    <div id="main-block">
+        <h3>Heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque ex tempora optio mollitia nesciunt..</p>
+    </div>
+
+    <div id="sidebar">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque ex tempora optio mollitia nesciunt..</p>
+    </div>
+
     <!-- End of Container -->
 </div> 
 
