--- a/CSScheatsheet/index.html
+++ b/CSScheatsheet/index.html
@@ -83,6 +83,15 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque ex tempora optio mollitia nesciunt..</p>
     </div>
 
+    <div class="clr"></div>
+        
+    <div class= "p-box"> 
+        <h1>Hello</h1>
+        <h2>GoodBye</h2>
+    </div>
+
+
+
     <!-- End of Container -->
 </div> 
 
