--- a/CSScheatsheet/index.html
+++ b/CSScheatsheet/index.html
@@ -90,7 +90,7 @@
         <h2>GoodBye</h2>
     </div>
 
-    <ul>
+    <ul class="my-list">
         <li>List Item</li>
         <li>List Item</li>
         <li>List Item</li>
