--- a/CSScheatsheet/index.html
+++ b/CSScheatsheet/index.html
@@ -68,7 +68,7 @@
 
     <div class="block">
         <h3>Heading</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque ex tempora optio mollitia nesciunt..</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque ex tempora optio mollitia nesciunt...</p>
     </div>
 
     <div class="clr"></div>
