--- a/Best Practices/Layout3.html
+++ b/Best Practices/Layout3.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
-
-
+    <title>Exercise 2</title>
+    <link rel="stylesheet" href="./Layout2.css">
+</head>
 <body>
 
-    <p>Hello World</p>
-
-    
     <div class="container">
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-</div>
-    
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box box-large"></div>
+    </div>
 </body>
 </html>
